// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Tests Renders ArrowDown 1`] = `
<svg
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M5 8l4 4 4-4z"
  />
  <path
    d="M0 0h18v18H0z"
    fill="none"
  />
</svg>
`;

exports[`Icons Tests Renders Check 1`] = `
<svg
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="m0 0h24v24h-24z"
    fill="none"
  />
  <path
    d="m9 16.2-4.2-4.2-1.4 1.4 5.6 5.6 12-12-1.4-1.4z"
  />
</svg>
`;

exports[`Icons Tests Renders Close 1`] = `
<svg
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h18v18H0zm0 0h18v18H0z"
    fill="none"
  />
  <path
    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
  />
</svg>
`;
